// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion collapses 1`] = `
<div
  className="sc-gYgiyK efHCql"
>
  <div
    className="sc-lfoLCh bvulnv"
    disabled={false}
  >
    <h3
      className="sc-dOaiCS bKdMCw"
      onClick={[Function]}
    >
      Test
    </h3>
    <div
      onClick={[Function]}
    >
      Additional content
    </div>
    <button
      className="sc-gcitqq dNgbfT"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-cTQhss irIToI"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25 11.5l-9 9-9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iEYPXb cPbBvj"
  >
    <div
      className="sc-jywedQ cEufms"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion expands 1`] = `
<div
  className="sc-gYgiyK efHCql"
>
  <div
    className="sc-lfoLCh bvulnv"
    disabled={false}
  >
    <h3
      className="sc-dOaiCS bKdMCw"
      onClick={[Function]}
    >
      Test
    </h3>
    <div
      onClick={[Function]}
    >
      Additional content
    </div>
    <button
      className="sc-gcitqq dNgbfT"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-kgUAyh jdnJtb"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 20.5l9-9 9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iEYPXb hLopMX"
  >
    <div
      className="sc-jywedQ cEufms"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders 1`] = `
<div
  className="sc-gYgiyK efHCql"
>
  <div
    className="sc-lfoLCh bvulnv"
    disabled={false}
  >
    <h3
      className="sc-dOaiCS bKdMCw"
      onClick={[Function]}
    >
      Test
    </h3>
    <div
      onClick={[Function]}
    >
      Additional content
    </div>
    <button
      className="sc-gcitqq dNgbfT"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="sc-cTQhss irIToI"
        fill="none"
        fontSize="2rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M25 11.5l-9 9-9-9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
  </div>
  <div
    className="sc-iEYPXb cPbBvj"
  >
    <div
      className="sc-jywedQ cEufms"
    >
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;
